--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.2.2",
+    "@zeit/next-less": "^1.0.1",
+    "antd": "^4.5.4",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
+  },
+  "devDependencies": {
+    "@types/node": "^14.6.0",
+    "@types/react": "^16.9.46",
+    "less": "^3.12.2",
+    "typescript": "^3.9.7"
   }
 }
