--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "@ant-design/icons": "^4.2.2",
     "@zeit/next-less": "^1.0.1",
     "antd": "^4.5.4",
+    "less": "^3.12.2",
     "next": "9.5.2",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-react": "^7.10.4",
     "@types/node": "^14.6.0",
     "@types/react": "^16.9.46",
-    "less": "^3.12.2",
+    "babel-jest": "^26.3.0",
+    "jest": "^26.4.1",
+    "react-test-renderer": "^16.13.1",
     "typescript": "^3.9.7"
   }
 }
